# suchak-backend

./: .gitignore  README.md  pyproject.toml
src/cli/: __init__.py
src/cli/commands/: __init__.py
src/cli/commands/index/: __init__.py  all.py
src/cli/commands/server/: __init__.py  run.py
